.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Product__c.object
<CustomObject>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Products</relationshipLabel>
        <relationshipName>Job_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Product_Name__c</fullName>
        <description>Name of the adjoining product</description>
        <formula>sked__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Job Products</relationshipLabel>
        <relationshipName>Job_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Job Product</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Job Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__ProductMustBeSet</fullName>
        <active>true</active>
        <description>Product must always be set on a JobProduct. This is implemented as a validation rule as we cannot create MasterDetail or contrained Lookups to a Product Object</description>
        <errorConditionFormula>ISNULL( sked__Product__c )</errorConditionFormula>
        <errorDisplayField>sked__Product__c</errorDisplayField>
        <errorMessage>Product must be set</errorMessage>
    </validationRules>
</CustomObject>